Fixed alignment, updated subhead, added donor title, added star to address

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ a {
     margin-top: 52px;
 }
 
+.extra-bottom-margin {
+    margin-bottom: 5px;
+}
+
 .calendar {
     width: 100%;
     height: 60%;
